--- a/main/templates/main/header_base.html
+++ b/main/templates/main/header_base.html
@@ -39,7 +39,7 @@
             <a href="{% url 'main_page' %}">
                 <img src="{% static 'main/images/logo.png' %}" alt="COLRED">
             </a>
-            <div>Создатель и редактор персонажей для Pathfinder 2e</div>
+            <div>Создатель и редактор персонажей для DnD 5 Ed.</div>
         </div>
         <div class="hide"></div>
         <div class="search shadow">
