--- a/main/static/main/css/floating_search.css
+++ b/main/static/main/css/floating_search.css
@@ -8,10 +8,10 @@
 
 .search_field {
     max-height: 80vh;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black;
+    background-color: rgb(38, 38, 38);
+    border: 3px solid #171717;
     overflow-y: auto;
-    border-bottom-width: 0px;
+    /*! border-bottom-width: 0px; */
 }
 
 .floating_search a { 
@@ -46,13 +46,7 @@
     /* border-radius: 20px; */
 }
 
-.floating_search .strange {
-    width: 318px;
-    border: 1px solid black;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-    
-}
+
 
 
 
