--- a/main/static/main/css/main_style.css
+++ b/main/static/main/css/main_style.css
@@ -1,9 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Palatino Linotype", Arial;
+  font-family: "Century Gothic", Arial;
   transition: all 0.2s;
   outline: none;
+  color: #757575;
+  /*! background-color: #262626; */
 }
 
 input {
@@ -11,10 +13,11 @@ input {
   outline: none;
   border: 0;
   background: unset;
+  font-size: 18px;
 }
 
 a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
@@ -33,6 +36,8 @@ body {
   display: grid;
   grid-template-areas: "main" "footer";
   grid-template-rows: 1fr auto;
+  background-color: #262626;
+  
 }
 
 
@@ -52,17 +57,15 @@ body {
 }
 
 .filter_fix>div:nth-child(1) {
-  background: url(../images/login_page.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  /*! background: url(../images/login_page.svg); */
+  /*! background-repeat: no-repeat; */
+  /*! background-size: cover; */
+  background-color: #151515;
 }  
 
 @media screen and (max-width: 620px) {
   .filter_fix>div:nth-child(1) {
-    background: url(../images/login_page_mobile.svg);
-    background-repeat: no-repeat;
     background-size: auto;
-    background-position: center;
   }
 
   .filter_fix {
@@ -85,10 +88,6 @@ body {
   }
 }
 
-.shadow{
-  filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.5));
-}
-
 .filter_fix>div:nth-child(2) {
   width: 100%;
   z-index: 999;
@@ -102,8 +101,8 @@ header {
   width: 100%;
   top: 0;
   position: fixed;
-  background-color: white;
-  filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.5));
+  background-color: #171717;
+  /*! filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.5)); */
   z-index: 999;
 }
 
@@ -115,7 +114,7 @@ header .coach {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.4));
+  /*! filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.4)); */
 }
 
 .coach>div {
@@ -139,11 +138,12 @@ header .logo * {
 header .logo img {
   height: 60px;
   width: auto;
+  filter: invert(1);
 }
 
 header .lknick {
   width: 220px;
-  height: 44px;
+  height: 40px;
   justify-content: space-between;
   align-items: center;
   margin-right: 10px;
@@ -151,15 +151,11 @@ header .lknick {
   text-align: center
 }
 
-header .lknick>div:nth-child(2) {
-  margin-top: 5px;
-}
-
 
 header .lknick .nickname {
-  background: url(../images/nickname.svg) !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
+  /*! background: url(../images/nickname.svg) !important; */
+  /*! background-repeat: no-repeat !important; */
+  /*! background-size: cover !important; */
   height: inherit;
 }
 
@@ -168,11 +164,6 @@ header .lknick .nickname {
   height: 60px;
 }
 
-.avatar>div:nth-child(2) {
-  background: url(../images/avatar.svg) !important;
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-}
 
 .avatar>div:nth-child(1){
   background: unset !important;
@@ -185,35 +176,29 @@ header .lknick .nickname {
 }
 
 
-/* header .lknick>div {
-  padding-top: 5px;
-  display: flex;
-  justify-content: center;
-  flex-grow: 33;
-} */
-
 header .search{
-  background: url(../images/search_window.svg);
+  /*! background: url(../images/search_window.svg); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top 0px right 0px;
   width: 317px;
-  height: 60px;
+  height: 40px;
+  background-color: #262626;
 }
 
 header .search>div {
-  padding: 0 0 10px 12px;
+  /*! padding: 0 0 10px 12px; */
   color: gray;
   font-weight: bold;
   width: 235px;
-  padding-left: 0px;
-  margin-left: 43px;
+  /*! padding-left: 0px; */
+  /*! margin-left: 0px; */
 }
 
 header .search input{
   width: 235px;
   text-align: center;
-  background: unset;
+  /*! background: unset; */
   outline: none;
   border: 0px;
   font-size: 16px;
@@ -256,7 +241,7 @@ header .search input{
 
 
 .strange {
-  background: url(../images/separator.svg);
+  /*! background: url(../images/separator.svg); */
   background-color: rgba(0, 0, 0, 0);
   width: 100vw;
   height: 10px;
@@ -282,13 +267,13 @@ main {
   width: 200px;
   height: 300px;
   display: inline-block;
-  background: url(../images/portrait.svg) no-repeat center;
+  /*! background: url(../images/portrait.svg) no-repeat center; */
   background-repeat: no-repeat;
   background-size: cover;
   padding: 5px 0px;
   margin: 10px 50px;
-  filter: drop-shadow( 3px 3px 2px rgba(34, 60, 80, 0.4));
-  /* background-color: aliceblue; */
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, 0.4));
+  background-color: #e6ac00;
 }
 
 .listing {
@@ -304,26 +289,28 @@ main {
   white-space: nowrap;
   overflow: hidden;
   max-width: 175px;
+  background-color: #171717;
+  padding: 5px;
 }
 
 .listing:hover {
   margin-top: 5px;
   /*background-color: rgb(71, 59, 248);*/
   /* box-shadow: 5px 5px 6px black; */
-  filter: drop-shadow( 10px 10px 4px rgba(34, 60, 80, 0.5));
+  filter: drop-shadow( 10px 10px 4px rgba(0, 0, 0, 0.5));
   margin-bottom: 15px;
 }
 
 .addnew {
-  background: url(../images/new_portrait.svg);
+  /*! background: url(../images/new_portrait.svg); */
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .addnew>div {
-  width: 66px;
+  /*! width: 66px; */
   margin-bottom: 86px;
-  font-size: 14px;
+  font-size: 20px;
   text-align: center;
 }
 
