--- a/usr_auth/templates/registration/login.html
+++ b/usr_auth/templates/registration/login.html
@@ -15,7 +15,7 @@
         <img src="{% static 'main/images/logo.png' %}" alt="COLRED">
     </div>
     <div>
-        <h2>Создатель и редактор персонажей для Pathfinder 2E</h2>
+        <h2>Создатель и редактор персонажей для DnD 5 Ed.</h2>
     </div>
     <div class="filter_fix">
         <div class="shadow">
